# token_profile_full

./: .gitignore  CLAUDE.md  README.md  config.yaml
CHECK_CONNECTION/: go.mod  hot_main.go  main.go
CHECK_CONNECTION/config/: config.go
CHECK_CONNECTION/models/: profile.go
CHECK_CONNECTION/token/: api_client.go  buffer.go  manager.go
CHECK_CONNECTION/token_hot/: manager.go
CHECK_CONNECTION/tools/: split_files.go
CHECK_CONNECTION/worker/: pool.go
CHECK_CONNECTION/worker_hot/: pool.go
CHECK_CONNECTION/writer/: result.go
Get_Profile/: gen_emails.py  go.mod  main.go
Get_Profile/api/: client.go
Get_Profile/config/: config.go
Get_Profile/models/: profile.go
Get_Profile/progress/: bitmap.go
Get_Profile/proxy/: proxy.go
Get_Profile/reader/: file.go
Get_Profile/token/: api.go  exchange.go  manager.go  redis.go
Get_Profile/worker/: pool.go
Manage_User/: README.md  admin_token_manager.py  app.py  cleanup.py  creator.py  deleter.py  main.py  producer.py  proxy_config.py  redis_pusher.py  requirements.txt  token_getter.py
VN-TAKK/: main.py  redis_client.py  requirements.txt
docs/: DEPLOYMENT.md
email-gen/: .gitignore  Cargo.toml  README.md  run.sh
email-gen/.cargo/: config.toml
email-gen/benches/: generator_bench.rs
email-gen/src/: config.rs  error.rs  generator.rs  lib.rs  main.rs  reader.rs  splitter.rs  stats.rs  writer.rs
email-gen/tests/: integration_test.rs
scripts/: cron_vn_takk.sh  deploy_central.sh  deploy_worker.sh  parse_config.sh  split_deploy.sh
token-api/: .gitignore  go.mod  handler.go  main.go  models.go  redis.go
(+7 files in other folders)
